# Shugu_code

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  index.html  mascot.html  package.json  pnpm-lock.yaml  tauri-dev.cmd  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.shugu-snippets/: snippet-1779305644339.txt
convex/: agentPresets.ts  conversations.ts  imageJobs.ts  messages.ts  modelProviders.ts  projects.ts  promptTemplates.ts  schema.ts
convex/_generated/: api.js
docker/: playwright.Dockerfile
docs/: command-registry-mapping.md  fs-layer-spec.md  git-ipc-contract.md
docs/design-kit/: Shugu Kit.html  kit.css  kit.jsx
public/design-skills/: index.json
public/design-systems/: index.json
scripts/: fetch-llama-binary.ps1  vendor-open-design.mjs
src/: App.tsx  main.tsx  mascot.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/binaries/cpu/: checksum.txt
src-tauri/binaries/vulkan/: checksum.txt
src-tauri/capabilities/: default.json  mascot.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent_defs.rs  chat.rs  codex.rs  codex_app_server.rs  credentials.rs  diag.rs  format.rs  fs.rs  git.rs  git_watcher.rs  grep.rs  image.rs  llama.rs  lsp.rs  mod.rs  model_bundle.rs  models.rs  preview.rs  studio.rs  terminal.rs  vector.rs  watcher.rs
src-tauri/src/commands/agents/: bench.rs  harness.rs  mirror.rs  mod.rs  runner.rs  sandbox.rs  skills.rs  tools.rs
src/components/: MenuBar.tsx  ToastHost.tsx  components.tsx  fileIcons.tsx  toast.ts
src/features/agents/: AgentDefsManager.tsx  AgentsPanel.tsx  HarnessPanel.tsx  agentDefsQueries.ts  harnessQueries.ts  keys.ts  queries.ts  skillsQueries.ts  useEvents.ts
src/features/chat/: ChatPanel.tsx  chat-sidebar.tsx  chat-sync.ts  chatBusy.ts  chatUnread.ts  codeContext.test.ts  codeContext.ts  keys.ts  mentions.test.ts  mentions.ts  mutations.ts  queries.ts  resolveProvider.ts  useChatStream.ts  useEvents.ts  useMessageDisplay.ts  views-chat.tsx
src/features/code/: Breadcrumbs.tsx  CodeMirrorEditor.tsx  DiffView.tsx  FindPanel.tsx  OutlinePanel.tsx  blame-decorations.test.ts  blame-decorations.ts  format-diff.test.ts  format-diff.ts  format.ts  git-decorations.test.ts  git-decorations.ts  languages.test.ts  languages.ts  theme.ts  views-code.tsx
src/features/code/ai-edit/: InlineEditWidget.tsx  aiEditController.ts  applyController.ts  runAiEdit.ts  types.ts  unifiedDiffExtension.ts
src/features/code/autocomplete/: autocompleteState.test.ts  autocompleteState.ts  fimPrompt.test.ts  fimPrompt.ts  fimTrigger.ts  ghostText.ts  runFimCompletion.ts
src/features/code/extensions/: bracketPairColors.ts  minimap.test.ts  minimap.ts  regionFolding.test.ts  regionFolding.ts  stickyScroll.test.ts  stickyScroll.tsx  wordWrap.ts
src/features/code/grep/: keys.ts  queries.ts
src/features/code/lsp/: client.ts  transport.ts
src/features/code/outline/: keys.ts  queries.ts
src/features/code/snippets/: keys.ts  loader.ts  markdown.json  python.json  rust.json  typescript.json
src/features/connections/: CodexUsage.tsx  Connections.tsx  codexQueries.ts
src/features/context-cards/: ContextBubble.tsx  cards.tsx
src/features/design/: DesignView.tsx  activeDesignSystem.ts  queries.ts
src/features/dock/: Dock.tsx
src/features/floating/: FloatChat.tsx  FloatShell.tsx  useFloatMode.ts  useFloatPosition.ts
src/features/fs/: chunker.test.ts  chunker.ts  keys.ts  queries.ts  useEvents.ts  useRefreshOpenFiles.ts  workspaceIndexer.ts
src/features/git/: SideGit.tsx  keys.ts  mutations.ts  queries.ts  reviewDialogStore.ts  useAICodeReview.test.ts  useAICodeReview.ts  useAICommit.test.ts  useAICommit.ts  useEvents.ts  useGitStatusMap.test.ts  useGitStatusMap.ts  useWorkspaceChanges.test.ts  useWorkspaceChanges.ts
src/features/git/components/: BranchSwitcher.tsx  CommitDialog.tsx  LogPanel.tsx  (+6 more)
src/features/llama/: useLlamaLifecycle.ts
src/features/mascot/: Chibi.tsx  ChibiWithMood.tsx  calibration.ts  idleStore.ts  moodReactionStore.ts  moodReactions.test.ts  moodReactions.ts  useChibiMood.ts
src/features/onboarding/: Onboarding.tsx  queries.ts
src/features/panels/: AccountDropdown.tsx  AnnotationLayer.tsx  ContextMenu.tsx  ModelPicker.tsx  panels.tsx
src/features/profile/: ProfileView.tsx
src/features/settings/: MascotCalibration.tsx  settings-extras.tsx
src/features/studio/: DirectionPicker.tsx  DiscoveryForm.tsx  ProjectPreview.tsx  StudioConversation.tsx  StudioFiles.tsx  StudioProjectsView.tsx  StudioShell.tsx  StudioTurnView.tsx  StudioView.tsx  directions.ts  generationContext.test.ts  generationContext.ts  studioChat.ts  studioDraft.ts  studioExport.ts  studioProjects.ts
src/features/tweaks/: tweaks-panel.tsx
src/lib/: ThemeBootstrap.tsx  agentDefs.ts  agents.ts  codex.ts  colors.ts  commands.ts  convex.ts  credentials.ts  db.ts  diag.ts  fs.test.ts  fs.ts  git.ts  ide-state.ts  imageProviders.ts  keybindings.ts  llamaLifecycle.ts  markdown.test.ts  markdown.ts  modelBundle.ts  modelDiscovery.ts  providers.ts  queryClient.ts  routingHeuristic.ts  tauri.ts  thinkingHeuristic.ts  types.ts  vector.ts
src/mocks/: seedAgents.ts  seedConversations.ts  seedFileContents.ts  seedFileTree.ts  seedGalleryFolders.ts  seedGenerations.ts  seedMessages.ts
src/routes/: RootLayout.tsx  agents.tsx  chat.tsx  code.tsx  connections.tsx  design.tsx  gallery.tsx  git.tsx  harness.tsx  image.tsx  profile.tsx  settings.section.tsx  settings.tsx  shell-context.ts  studio.create.tsx  studio.projects.tsx  studio.tsx
src/styles/: ai-edit.css  chat-codex.css  chat-sidebar.css  design.css  forge-integrations.css  panels.css  settings-extras.css  studio.css  styles.css
test-fixtures/lot1/: README.md
test-fixtures/lot1/edge-cases/: UPPERCASE.YAML  long-lines.md
test-fixtures/lot1/languages/: Cargo.toml  Counter.svelte  Dockerfile  HelloWorld.vue  MainApp.java  Sample.rs
test-fixtures/lot1/regions/: c-style.ts  html-style.html  python-style.py
