[package]
name = "shugu-forge"
version = "0.1.0"
description = "Shugu Forge — desktop workshop (Tauri 2 / React / CodeMirror 6)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "shugu_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
fastembed = "4"

[features]
custom-protocol = ["tauri/custom-protocol"]
