[package]
name = "shugu-forge"
version = "0.1.0"
description = "Shugu Forge — desktop workshop (Tauri 2 / React / CodeMirror 6)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "shugu_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
fastembed = "4"
notify = "6"
portable-pty = "0.8"
which = "6"

# keyring v3 has NO default features — without an explicit platform feature
# it compiles but provides no real backend (a fall-through "sample" store
# that silently accepts writes and reads but never persists across processes).
# This was the root cause of "I saved a Mistral key, switched tab, came back,
# the card was empty". Features must be declared per-OS so the same crate
# resolves to the right native backend on each platform.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
