[package]
name = "shugu-forge"
version = "0.1.0"
description = "Shugu Forge — desktop workshop (Tauri 2 / React / CodeMirror 6)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "shugu_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
# UUID v4 for agent identifiers — agents.rs uses Uuid::new_v4() to mint
# stable IDs that the frontend can dedupe events against. v4 is random
# (no MAC leak), 128-bit collision-free for our scale, and matches the
# format the Tauri event bus already serializes through serde transparently.
uuid = { version = "1", features = ["v4"] }
sqlite-vec = "0.1"
fastembed = "4"
# SHA256 streaming for model_bundle.rs (download verification).
# RustCrypto family — pure-Rust, no system OpenSSL dep, identical wire
# output to coreutils' `sha256sum` for cross-checking against HuggingFace
# release pages.
sha2 = "0.10"
notify = "6"
portable-pty = "0.8"
which = "6"

# Git read-side ops (status, log, blame, diff) via libgit2 bindings.
# `vendored-libgit2` bundle libgit2 — pas de dep système. NE PAS activer
# `vendored-openssl` : sur Windows libgit2 utilise Schannel par défaut, et
# Shugu Forge ne fait JAMAIS de HTTPS via git2 (push/pull/fetch passent
# par `git` CLI pour respecter les hooks/credentials/config locales).
# Économie : pas de perl-strawberry requis pour le build MSVC.
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }

# Find-in-files (LOT 2) — ripgrep en mode librairie.
#   - `ignore` : walker qui respecte .gitignore, .ignore, et les globs custom.
#               C'est le même walker que ripgrep utilise en CLI.
#   - `grep-searcher` : moteur de recherche line-oriented, avec sink callback.
#   - `grep-regex` : matcher regex (PCRE-like sans PCRE — uses Rust regex crate).
#   - `regex` : pour `regex::escape()` quand l'utilisateur cherche du texte
#               littéral (non-regex mode). Déjà transitif via grep-regex mais
#               on l'expose explicitement pour clarté.
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
regex = "1"

# LOT 3 — LSP file:// URI percent-encoding (rust-analyzer/pylsp rejettent les
# URI avec espaces ou caractères non-ASCII non-encodés, fréquent sur des
# chemins Windows type `C:\Users\Jean Côté\OneDrive\...`).
percent-encoding = "2"

# keyring v3 has NO default features — without an explicit platform feature
# it compiles but provides no real backend (a fall-through "sample" store
# that silently accepts writes and reads but never persists across processes).
# This was the root cause of "I saved a Mistral key, switched tab, came back,
# the card was empty". Features must be declared per-OS so the same crate
# resolves to the right native backend on each platform.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["linux-native-sync-persistent"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
